--- a/index.html
+++ b/index.html
@@ -1212,7 +1212,30 @@
         </div>
 
         <div class="full-img">
-            <img src="/2st-project img - Copy/img...1 img 2st-project.webp" alt="">
+            <div class="box-logo">
+                <div class="logo-box">
+                    <img src="/2st-project img - Copy/track-logo-img.png" alt="">
+                    <h5>Free Shipping</h5>
+                    <p>Shipping At Tour Doorstep Free Of Cost</p>
+                </div>
+
+            </div>
+            <div class="box-logo">
+                <div class="logo-box">
+                    <img src="/2st-project img - Copy/box-logo-img.png" alt="">
+                    <h5>Premium Packaging</h5>
+                    <p>Packaged In Premium Boxes To Ensure The Safety And Long-life Of Your Bag</p>
+                </div>
+
+            </div>
+            <div class="box-logo">
+                <div class="logo-box">
+                    <img src="/2st-project img - Copy/bag-logo-img.png" alt="">
+                    <h5>Fashion-First Brend</h5>
+                    <p>Latest trends And Styles To Not Miss Out</p>
+                </div>
+
+            </div>
         </div>
 
         
@@ -1288,35 +1311,35 @@
             </div>
 
             <div class="img-last">
-               <div class="1box">
+               <div class="b1box">
                 <img src="/2st-project img - Copy/last img 1.webp" alt="">  
                 <div class="para1">
                     <p><p class="pg">Shanaya kapoor</p></p>
                     <p>Bollywood Cely
                 </div>
             </div> 
-            <div class="1box">     
+            <div class="b1box">     
                 <img src="/2st-project img - Copy/last img 2.webp" alt="">                                  
                     <div class="para1">
                         <p><p class="pg">Athiya Shetty</p></p>
                         <p>Celebrity</p>
                     </div>  
                     </div>  
-                    <div class="1box">         
+                    <div class="b1box">         
                 <img src="/2st-project img - Copy/last img 3.jpg" alt=""> 
                 <div class="para1">
                     <p><p class="pg">Ria Jain</p></p>
                     <p>Blogger</p>
                 </div>  
                 </div>   
-                <div class="1box">              
+                <div class="b1box">              
                 <img src="/2st-project img - Copy/last img 4.webp" alt="">
                 <div class="para1">
                     <p><p class="pg">Komal Pandey</p></p>
                     <p>Model</p>
                 </div>  
                 </div>  
-                <div class="1box">
+                <div class="b1box">
                 <img src="/2st-project img - Copy/last img 5.webp" alt="">
                 <div class="para1">
                     <p><p class="pg">Shanaya joshy</p></p>
