--- a/index.html
+++ b/index.html
@@ -1211,6 +1211,7 @@
             </div>
         </div>
 
+        <div class="emt"></div>
         <div class="full-img">
             <div class="box-logo">
                 <div class="logo-box">
