--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             </div>
             <!-- video -->
             <div class="video-slide">
-                <div class="video">
+                <div class="video"width="230" height="400px">
 
 
                    <!-- 1 video -->
